[package]
name = "refrs-core"
description = "core logic for refrs, the academic referencing system written in rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["craftwork4498 <craftwork4498@gmail.com"]
repository = "https://github.com/craftwork4498/refrs-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
